--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.26.0",
+    "@sveltejs/kit": "^1.27.7",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.7",
@@ -88,7 +88,7 @@
     "postcss-load-config": "^4.0.1",
     "publint": "^0.2.5",
     "source-map-explorer": "^2.5.3",
-    "svelte": "^4.2.2",
+    "svelte": "^5.0.0-next.22",
     "svelte-check": "^3.5.2",
     "svelte-doc-kit": "^0.0.7",
     "svelte-preprocess": "^5.0.4",
